--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -1,36 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/news_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_margin="20dp" />
 
     <TextView
         android:id="@+id/news_title"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="10dp"/>
+        android:layout_marginLeft="130dp"
+        android:layout_marginTop="20dp"
+        android:textSize="18dp" />
 
     <TextView
         android:id="@+id/news_src"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="10dp"/>
+        android:layout_marginTop="80dp"
+        android:layout_marginLeft="130dp" />
 
     <TextView
         android:id="@+id/news_ptime"
+        android:layout_marginTop="100dp"
+        android:layout_marginLeft="130dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="10dp"/>
+        android:layout_height="wrap_content" />
 
-</LinearLayout>
+</RelativeLayout>
