--- a/app/src/main/res/layout/activity_house.xml
+++ b/app/src/main/res/layout/activity_house.xml
@@ -7,17 +7,32 @@
     tools:context="com.findhouse.activity.HouseActivity">
 
     <TextView
-        android:id="@+id/titlename"
+    android:id="@+id/theme"
+    android:layout_width="match_parent"
+    android:layout_height="60dp"
+    android:layout_weight="1"
+    android:background="@color/design_default_color_primary"
+    android:gravity="center"
+    android:text=""
+    android:textColor="@android:color/background_light"
+    android:textSize="20sp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/title"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="160dp"
+        android:layout_marginTop="92dp"
         android:layout_weight="1"
-        android:background="@color/design_default_color_primary"
         android:gravity="center"
         android:text=""
-        android:textColor="@android:color/background_light"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
