--- a/app/src/main/res/layout/activity_house.xml
+++ b/app/src/main/res/layout/activity_house.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,10 +7,9 @@
     tools:context="com.findhouse.activity.HouseActivity">
 
     <TextView
-    android:id="@+id/theme"
+    android:id="@+id/title"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:layout_weight="1"
     android:background="@color/design_default_color_primary"
     android:gravity="center"
     android:text=""
@@ -20,12 +19,18 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/title"
+    <com.youth.banner.Banner
+        android:id="@+id/banner"
         android:layout_width="match_parent"
-        android:layout_height="160dp"
-        android:layout_marginTop="92dp"
-        android:layout_weight="1"
+        android:layout_marginTop="60dp"
+        android:layout_height="250dp" />
+
+
+    <TextView
+        android:id="@+id/houseTitle"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_marginTop="320dp"
         android:gravity="center"
         android:text=""
         android:textSize="20sp"
@@ -34,5 +39,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
