--- a/app/src/main/res/layout/activity_house.xml
+++ b/app/src/main/res/layout/activity_house.xml
@@ -6,37 +6,20 @@
     android:layout_height="match_parent"
     tools:context="com.findhouse.activity.HouseActivity">
 
-    <TextView
-    android:id="@+id/title"
-    android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:background="@color/design_default_color_primary"
-    android:gravity="center"
-    android:text=""
-    android:textColor="@android:color/background_light"
-    android:textSize="20sp"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
-
     <com.youth.banner.Banner
         android:id="@+id/banner"
         android:layout_width="match_parent"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="00dp"
         android:layout_height="250dp" />
 
 
-    <TextView
-        android:id="@+id/houseTitle"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/houseDetail"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_marginTop="320dp"
-        android:gravity="center"
-        android:text=""
-        android:textSize="20sp"
+        android:layout_height="match_parent"
+        android:layout_below="@id/banner"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintVertical_bias="0.0" />
 
 </RelativeLayout>
