--- a/app/src/main/res/layout/activity_house.xml
+++ b/app/src/main/res/layout/activity_house.xml
@@ -13,13 +13,114 @@
         android:layout_height="250dp" />
 
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/houseDetail"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+    <TextView
+        android:id="@+id/houseTitle"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
         android:layout_below="@id/banner"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="20dp"
+        android:textColor="#000000"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/housePosition"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/houseTitle"
+        android:layout_marginTop="10dp"
+        android:textColor="#000000"
+        android:layout_marginLeft="10dp"
+        android:textSize="15dp" />
+
+    <View
+        android:id="@+id/split"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@id/housePosition"
+        android:layout_marginTop="10dp"
+        android:background="#ffcccccc"/>
+
+    <TextView
+        android:id="@+id/houseTotalPrice"
+        android:layout_below="@id/split"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:id="@+id/houseArea"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/split"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="230dp" />
+
+    <TextView
+        android:id="@+id/houseApartment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/houseTotalPrice"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="10dp" />
+
+    <TextView
+        android:id="@+id/houseFix"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/houseArea"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="230dp" />
+
+    <TextView
+        android:id="@+id/houseOrientation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/houseApartment"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="10dp" />
+
+    <TextView
+        android:id="@+id/houseFloor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/houseFix"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="230dp" />
+
+    <View
+        android:id="@+id/splitTwo"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@id/houseFloor"
+        android:layout_marginTop="30dp"
+        android:background="#ffcccccc"/>
+
+    <TextView
+        android:id="@+id/houseInstall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/splitTwo"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="10dp" />
+
+    <View
+        android:id="@+id/splitThree"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@id/houseInstall"
+        android:layout_marginTop="30dp"
+        android:background="#ffcccccc"/>
+
+    <TextView
+        android:id="@+id/houseDes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/splitThree"
+        android:lineSpacingMultiplier="1.2"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="10dp" />
+
 
 </RelativeLayout>
