--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,7 +10,7 @@
         android:id="@+id/titlename"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@color/design_default_color_primary"
+        android:background="@color/colorPrimary"
         android:gravity="center"
         android:text="找房子"
         android:textColor="@android:color/background_light"
