--- a/app/src/main/res/layout/house_item.xml
+++ b/app/src/main/res/layout/house_item.xml
@@ -26,16 +26,16 @@
         android:layout_marginLeft="130dp" />
 
     <TextView
-        android:id="@+id/house_position"
+        android:id="@+id/house_type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:layout_marginLeft="180dp" />
+        android:layout_marginTop="110dp"
+        android:layout_marginLeft="130dp" />
 
     <TextView
         android:id="@+id/house_totalPrice"
-        android:layout_marginTop="100dp"
-        android:layout_marginLeft="280dp"
+        android:layout_marginTop="110dp"
+        android:layout_marginLeft="250dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
