--- a/app/src/main/res/layout/activity_house.xml
+++ b/app/src/main/res/layout/activity_house.xml
@@ -129,9 +129,9 @@
         <Button
             android:id="@+id/btnPhone"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:text="电话"
-            android:textSize="28sp"
+            android:textSize="20sp"
             android:textColor="@android:color/background_light"
             android:background="@color/colorPrimary"
             android:layout_weight="1"
@@ -140,9 +140,10 @@
         <Button
             android:id="@+id/btnOrder"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="下单"
-            android:textSize="28sp"
+            android:layout_height="50dp"
+            android:visibility="gone"
+            android:text="租房"
+            android:textSize="20sp"
             android:textColor="@android:color/background_light"
             android:background="@color/colorPrimary"
             android:layout_weight="1"
