--- a/app/src/main/res/layout/activity_house.xml
+++ b/app/src/main/res/layout/activity_house.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.findhouse.activity.HouseActivity">
 
     <com.youth.banner.Banner
@@ -12,115 +12,133 @@
         android:layout_marginTop="00dp"
         android:layout_height="250dp" />
 
-
-    <TextView
-        android:id="@+id/houseTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_below="@id/banner"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="20dp"
-        android:textColor="#000000"
-        android:textSize="20sp" />
+        android:layout_above="@id/linearLayout"
+        android:fillViewport="true">
 
-    <TextView
-        android:id="@+id/housePosition"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/houseTitle"
-        android:layout_marginTop="10dp"
-        android:textColor="#000000"
-        android:layout_marginLeft="10dp"
-        android:textSize="15sp" />
+        <RelativeLayout
+            android:id="@+id/relativeLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-    <View
-        android:id="@+id/split"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@id/housePosition"
-        android:layout_marginTop="10dp"
-        android:background="#ffcccccc"/>
+            <TextView
+                android:id="@+id/houseTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="20dp"
+                android:textColor="#000000"
+                android:textSize="20sp" />
 
-    <TextView
-        android:id="@+id/houseTotalPrice"
-        android:layout_below="@id/split"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="10dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/housePosition"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/houseTitle"
+                android:layout_marginTop="10dp"
+                android:textColor="#000000"
+                android:layout_marginLeft="10dp"
+                android:textSize="15sp" />
 
-    <TextView
-        android:id="@+id/houseArea"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/split"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="230dp" />
+            <View
+                android:id="@+id/split"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@id/housePosition"
+                android:layout_marginTop="10dp"
+                android:background="#ffcccccc"/>
 
-    <TextView
-        android:id="@+id/houseApartment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/houseTotalPrice"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="10dp" />
+            <TextView
+                android:id="@+id/houseTotalPrice"
+                android:layout_below="@id/split"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
-    <TextView
-        android:id="@+id/houseFix"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/houseArea"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="230dp" />
+            <TextView
+                android:id="@+id/houseArea"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/split"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="230dp" />
 
-    <TextView
-        android:id="@+id/houseOrientation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/houseApartment"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="10dp" />
+            <TextView
+                android:id="@+id/houseApartment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/houseTotalPrice"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="10dp" />
 
-    <TextView
-        android:id="@+id/houseFloor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/houseFix"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="230dp" />
+            <TextView
+                android:id="@+id/houseFix"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/houseArea"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="230dp" />
 
-    <View
-        android:id="@+id/splitTwo"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@id/houseFloor"
-        android:layout_marginTop="20dp"
-        android:background="#ffcccccc"/>
+            <TextView
+                android:id="@+id/houseOrientation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/houseApartment"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="10dp" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/houseInstall"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/splitTwo" />
+            <TextView
+                android:id="@+id/houseFloor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/houseFix"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="230dp" />
 
-    <View
-        android:id="@+id/splitThree"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@id/houseInstall"
-        android:layout_marginTop="20dp"
-        android:background="#ffcccccc"/>
+            <View
+                android:id="@+id/splitTwo"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@id/houseFloor"
+                android:layout_marginTop="20dp"
+                android:background="#ffcccccc"/>
 
-    <TextView
-        android:id="@+id/houseDes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/splitThree"
-        android:lineSpacingMultiplier="1.2"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="10dp" />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/houseInstall"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/splitTwo" />
+
+            <View
+                android:id="@+id/splitThree"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@id/houseInstall"
+                android:layout_marginTop="20dp"
+                android:background="#ffcccccc"/>
+
+            <TextView
+                android:id="@+id/houseDes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/splitThree"
+                android:lineSpacingMultiplier="1.2"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="10dp" />
+
+        </RelativeLayout>
+
+    </ScrollView>
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:orientation="horizontal"
@@ -129,24 +147,26 @@
         <Button
             android:id="@+id/btnPhone"
             android:layout_width="0dp"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:text="电话"
             android:textSize="20sp"
             android:textColor="@android:color/background_light"
             android:background="@color/colorPrimary"
             android:layout_weight="1"
-            android:layout_marginRight="0.5dp" />
+            android:layout_marginRight="0.5dp"
+            android:layout_marginLeft="0.5dp"/>
 
         <Button
             android:id="@+id/btnOrder"
             android:layout_width="0dp"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:visibility="gone"
             android:text="租房"
             android:textSize="20sp"
             android:textColor="@android:color/background_light"
             android:background="@color/colorPrimary"
             android:layout_weight="1"
+            android:layout_marginRight="0.5dp"
             android:layout_marginLeft="0.5dp" />
 
     </LinearLayout >
