--- a/app/src/main/res/layout/house_item.xml
+++ b/app/src/main/res/layout/house_item.xml
@@ -26,7 +26,7 @@
         android:layout_marginLeft="130dp" />
 
     <TextView
-        android:id="@+id/house_totalPrice"
+        android:id="@+id/house_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="110dp"
