--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -15,39 +15,71 @@
         android:textSize="20sp" />
 
     <TextView
-        android:id="@+id/startTime"
-        android:layout_width="match_parent"
+        android:id="@+id/tvStart"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/titleName"
         android:layout_marginTop="50dp"
         android:layout_marginLeft="50dp"
-        android:hint="选择开始时间"
+        android:text="开始时间："
         android:textColor="#000000"
-        android:textColorHint="#000000"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/startTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/titleName"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="20dp"
+        android:layout_toRightOf="@id/tvStart"
+        android:hint="请选择"
+        android:textSize="20dp" />
+
+    <TextView
+        android:id="@+id/tvEnd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvStart"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="50dp"
+        android:text="结束时间："
+        android:textColor="#000000"
         android:textSize="20dp" />
 
     <TextView
         android:id="@+id/endTime"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/startTime"
         android:layout_marginTop="50dp"
+        android:layout_marginLeft="20dp"
+        android:layout_toRightOf="@id/tvStart"
+        android:hint="请选择"
+        android:textSize="20dp" />
+
+
+    <TextView
+        android:id="@+id/tvTotalPrice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/endTime"
+        android:layout_marginTop="50dp"
         android:layout_marginLeft="50dp"
-        android:hint="选择结束时间"
+        android:text="所需价格："
         android:textColor="#000000"
         android:textColorHint="#000000"
         android:textSize="20dp" />
 
     <TextView
         android:id="@+id/totalPrice"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/endTime"
         android:layout_marginTop="50dp"
-        android:layout_marginLeft="50dp"
-        android:text="总价："
+        android:layout_marginLeft="20dp"
+        android:layout_toRightOf="@id/tvTotalPrice"
         android:textColor="#000000"
-        android:textColorHint="#000000"
         android:textSize="20dp" />
 
     <LinearLayout
