--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#34699a</color>
     <color name="colorPrimaryDark">#34699a</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorGray">#ff888888</color>
 </resources>
