--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#34699a</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorGray">#ff888888</color>
+    <color name="colorLightGray">#CCCCCC</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
