--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorBlack">#000000</color>
     <color name="colorPrimary">#34699a</color>
     <color name="colorPrimaryDark">#34699a</color>
     <color name="colorAccent">#D81B60</color>
