--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/item_home" android:icon="@drawable/home" android:title="发现" />
+    <item android:id="@+id/item_home" android:icon="@drawable/home" android:title="房屋" />
     <item android:id="@+id/item_news" android:icon="@drawable/news" android:title="新闻" />
     <item android:id="@+id/item_me" android:icon="@drawable/me" android:title="我的" />
 </menu>
