--- a/app/src/main/res/layout/activity_house.xml
+++ b/app/src/main/res/layout/activity_house.xml
@@ -170,6 +170,20 @@
             android:layout_marginRight="0.5dp"
             android:layout_marginLeft="0.5dp" />
 
+        <Button
+            android:id="@+id/btnDelete"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:enabled="false"
+            android:text="删除"
+            android:textSize="20sp"
+            android:textColor="@android:color/background_light"
+            android:background="@color/colorRed"
+            android:layout_weight="1"
+            android:layout_marginRight="0.5dp"
+            android:layout_marginLeft="0.5dp" />
+
     </LinearLayout >
 
 </RelativeLayout>
